# sposa

./: AGENTS.md  LICENSE  README.md  main.py  meditations-on-moloch-summary.md  observation  pyproject.toml  research-notes.md  sposa.py  sposa_tui.py
misc/: interface-research.md  textual.md  textual_migration_plan.md
reads/: ideas  meditations  us  you  zen_test_strip
tests/: __init__.py  conftest.py  test_app_actions.py  test_clipboard.py  test_file_loading.py  test_orp_functions.py  test_sentence_navigation.py
tests/fixtures/: multisentence.txt
