[project]
name = "sposa"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=6.8.0",
    "pyperclip>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "ty>=0.0.1a32",
]

[project.scripts]
sposa = "sposa:main"

[tool.setuptools]
py-modules = ["sposa"]
